--- a/Citations generator.ipynb
+++ b/Citations generator.ipynb
@@ -171,7 +171,7 @@
     "    for link in links:\n",
     "        !curl -LH \"Accept: text/x-bibliography; style=$style\" $link >> {fname}.txt\n",
     "        counter += 1\n",
-    "        print(style, counter, \"of \", len(links), \" completed\" )"
+    "        # print(style, counter, \"of \", len(links), \" completed\" )"
    ]
   }
  ],
