--- a/LR_citation_recognition.ipynb
+++ b/LR_citation_recognition.ipynb
@@ -208,9 +208,6 @@
     "    else:\n",
     "        return sentence.translate({ord(i):\" {} \".format(i) for i in ',.()[]:;\\'\\\"-'})\n",
     "    \n",
-    "# mutated = token_punctuation(\"This is a ( Test ) N .. [ ] Sentence 3 'T'hree with \\\"a\\\" year 19 and month March.\")\n",
-    "# print('no noise: ', \"This is a ( Test ) N .. [ ] Sentence 3 'T'hree with \\\"a\\\" year 19 and month March.\")\n",
-    "# print('add noise', token_punctuation(\"This is a ( Test ) N .. [ ] Sentence 3 'T'hree with \\\"a\\\" year 19 and month March.\", True))\n",
     "\n",
     "''' Preprocess text column -- separate symbols with spaces to preserve punctuation as tokens'''\n",
     "def preprocess(df, add_noise=False): # text is a dataframe column\n",
@@ -284,7 +281,6 @@
     "    return df_extended\n",
     "\n",
     "    \n",
-    "# print(create_unknown(df))\n",
     "df_extended = create_unknown(df)"
    ]
   },
@@ -470,7 +466,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "pipeline = Pipeline([\n",
-    "    ('features', TfidfVectorizer(lowercase=False, token_pattern=r\"\\S+\")), #r\"(?u)(\\b\\w+\\b|[\\.\\\"(),\\'\\[\\]:;])\")),\n",
+    "    ('features', TfidfVectorizer(lowercase=False, token_pattern=r\"\\S+\")),\n",
     "    ('scaler', StandardScaler(with_mean=False)),\n",
     "    ('classifier', LogisticRegression(class_weight='balanced'))\n",
     "])\n",
@@ -3999,7 +3995,6 @@
     }
    ],
    "source": [
-    "\n",
     "df_extended"
    ]
   },
