--- a/main.ipynb
+++ b/main.ipynb
@@ -422,34 +422,14 @@
     "cat = ['acm-sig-proceedings', 'american-chemical-society', 'apa',\n",
     "       'chicago-author-date', 'harvard3', 'ieee', 'mla']\n",
     "enc = OneHotEncoder(handle_unknown='ignore')\n",
-    "# enc.fit(categories)\n",
     "enc.fit(gs.predict(df.text).reshape(-1, 1))\n",
     "\n",
     "def style_to_feature(style, train=False):\n",
-    "#     local_df = pd.DataFrame()\n",
-    "#     fstyle = list(map(lambda s: [s], style))\n",
     "    if train:\n",
     "        enc.fit(style.reshape(-1,1))\n",
     "    y_transformed = enc.transform(style.reshape(-1,1)).toarray()\n",
     "\n",
     "    return y_transformed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def style_encoder(styles):\n",
-    "    cat2vec = {}\n",
-    "    vec = []\n",
-    "    for i in range(len(categories)):\n",
-    "        cat2vec[categories[i][0]] = [0 for j in range(len(categories))]\n",
-    "        cat2vec[categories[i][0]][i] = 1\n",
-    "    for style in styles:\n",
-    "        vec.append(cat2vec[style])\n",
-    "    return np.array(vec)"
    ]
   },
   {
@@ -477,7 +457,7 @@
     "#         style = gs.predict([joined_ref])\n",
     "        for token, tag in ref:\n",
     "            features = get_word_vector(token)\n",
-    "            features = np.hstack([features, np.array(ner_features[token]), np.array(scibert_features[token])])#, style])\n",
+    "            features = np.hstack([features, np.array(ner_features[token]), np.array(scibert_features[token])])\n",
     "            X_ref.append(features)\n",
     "            y_ref.append(tag_to_idx[tag])\n",
     "\n",
@@ -485,8 +465,8 @@
     "        y.append(y_ref)\n",
     "\n",
     "    style = gs.predict(X_style)\n",
-    "    feature_style = style_to_feature(style, train)#style_encoder(style)#\n",
-    "#     X = style_to_feature(X, train)\n",
+    "    feature_style = style_to_feature(style, train)\n",
+    "\n",
     "    y_style = []\n",
     "    idx = 0\n",
     "    for ref in refs:\n",
@@ -606,15 +586,14 @@
     "        super().__init__()\n",
     "        self.hidden_size = hidden_size\n",
     "        self.lstm = LSTM(input_size, hidden_size, output_size, num_layers)\n",
-    "        # self.fc = nn.Linear(hidden_size, output_size)\n",
     "        self.fc = nn.Linear(hidden_size + X_style.shape[2], output_size)\n",
-    "        # self.fc1 = nn.Linear(output_size, output_size)\n",
+    "    \n",
     "\n",
     "    def forward(self, x, style):\n",
     "        output, (hn, cn) = self.lstm(x)\n",
     "        output = torch.cat((output, torch.tensor(style)), 2)\n",
     "        output = self.fc(output)\n",
-    "        # output = self.fc1(output)\n",
+    "    \n",
     "        return output\n"
    ]
   },
@@ -634,7 +613,7 @@
     "ner_feature_size = len(ner_dict.keys()) + 1\n",
     "scibert_feature_size = 768\n",
     "\n",
-    "input_size = we_feature_size + ner_feature_size + scibert_feature_size #+ len(categories) # Number of features (change accordingly)\n",
+    "input_size = we_feature_size + ner_feature_size + scibert_feature_size # Number of features (change accordingly)\n",
     "hidden_size = 25 #+ X_style.shape[2] # Number of features in the hidden state\n",
     "num_layers = 1 # Number of stacked LSTM layers\n",
     "\n",
