--- a/main.ipynb
+++ b/main.ipynb
@@ -332,8 +332,8 @@
     "        sentence = re.sub(r'\\b(January|February|March|April|May|June|July|August|September|October|November|December)\\b', random.choices(['M',''], weights=[3,1])[0], sentence)\n",
     "        sentence = re.sub(r'\\b(Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec)\\b', random.choices(['m',''], weights=[3,1])[0], sentence)\n",
     "    else:\n",
-    "        sentence = re.sub(r'\\b(January|February|March|April|May|June|July|August|September|October|November|December)\\b', 'M', sentence) #random.choices(['M',''], weights=[3,1])[0], sentence)\n",
-    "        sentence = re.sub(r'\\b(Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec)\\b', 'm', sentence) #random.choices(['m',''], weights=[3,1])[0], sentence)\n",
+    "        sentence = re.sub(r'\\b(January|February|March|April|May|June|July|August|September|October|November|December)\\b', 'M', sentence) \n",
+    "        sentence = re.sub(r'\\b(Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec)\\b', 'm', sentence) \n",
     "    sentence = re.sub(r\"\\b[a-z][a-z]+\\b\", 'w', sentence) #lowercase words\n",
     "    sentence = re.sub(r\"\\b[A-Z][a-z]+\\b\", 'W', sentence) #uppercase words\n",
     "    sentence = re.sub(r'\\b(1\\d{3}|20[012]\\d)\\b', 'y', sentence)\n",
@@ -375,7 +375,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "pipeline = Pipeline([\n",
-    "    ('features', TfidfVectorizer(lowercase=False, token_pattern=r\"\\S+\")), #r\"(?u)(\\b\\w+\\b|[\\.\\\"(),\\'\\[\\]:;])\")),\n",
+    "    ('features', TfidfVectorizer(lowercase=False, token_pattern=r\"\\S+\")),\n",
     "    ('scaler', StandardScaler(with_mean=False)),\n",
     "    ('classifier', LogisticRegression(class_weight='balanced'))\n",
     "])\n",
@@ -418,7 +418,7 @@
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
     "\n",
     "categories = [['acm-sig-proceedings'], ['american-chemical-society'], ['apa'],\n",
-    "       ['chicago-author-date'], ['harvard3'], ['ieee'], ['mla']]#, ['unknown']]\n",
+    "       ['chicago-author-date'], ['harvard3'], ['ieee'], ['mla']]\n",
     "cat = ['acm-sig-proceedings', 'american-chemical-society', 'apa',\n",
     "       'chicago-author-date', 'harvard3', 'ieee', 'mla']\n",
     "enc = OneHotEncoder(handle_unknown='ignore')\n",
@@ -454,7 +454,7 @@
     "        X_style.append(joined_ref)\n",
     "        ner_features = generate_ner_features(joined_ref)\n",
     "        scibert_features = get_scibert_vector(joined_ref)\n",
-    "#         style = gs.predict([joined_ref])\n",
+    "\n",
     "        for token, tag in ref:\n",
     "            features = get_word_vector(token)\n",
     "            features = np.hstack([features, np.array(ner_features[token]), np.array(scibert_features[token])])\n",
